--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,9 +14,13 @@ body {
 }
 
 header {
-    background-image: url('/assets/images/headshot.jpg');
+    /* background-image: url('/assets/images/headshot.jpg'); */
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('/assets/images/headshot.jpg');
     background-size: cover;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 
 #title {
