--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,9 +14,8 @@ body {
 }
 
 header {
-    /* background-image: url('/assets/images/headshot.jpg'); */
-    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('/assets/images/headshot.jpg');
-    background-size: cover;
+    background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url('/assets/images/headshot.jpg');
+    background-size: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -27,30 +26,35 @@ header {
     display: flex;
     justify-content: space-between;
     align-content: center;
-    padding: 300px 100px 400px 100px;
+    height: 100%;
 }
 
-header h1 {
-    width: 50%;
-    text-align: left;
-    font-size: 90px;
-    padding-right: 50px;
+#name {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 35%;
+    font-size: 38px;
 }
 
 #intro {
-    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 35%;
     text-align: right;
-    padding-left: 500px;
-    font-size: 18px;
+    margin-right: 50px;
+    /* font-size: 18px; */
 }
 
 #intro h2 {
-    font-size: 80px;
+    font-size: 40px;
 }
 
 header nav {
     width: 100%;
     text-align: center;
+    margin-bottom: 50px;
 }
 
 header nav ul {
@@ -70,5 +74,6 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-    background-color: tan;
+    background-color: rgb(29, 29, 29);
+    color: white;
 }
