--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,15 +4,23 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+:root {
+    --color1: rgb(29, 29, 29);
+    --color2: seashell;
+    --color3: gold;
+}
+
 html, body {
     height: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
-    background-color: rgb(29, 29, 29);
-    color: seashell;
+    /* background-color:  var(--color1); */
+    color: var(--color2);
 }
 
+/* header styles  */
 header {
     background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url('/assets/images/headshot.jpg');
     background-size: 100%;
@@ -35,6 +43,8 @@ header {
     justify-content: center;
     width: 35%;
     font-size: 38px;
+    color: var(--color2);
+    text-shadow: -5px -5px 5px rgba(0, 0, 0, 0.5);
 }
 
 #intro {
@@ -44,11 +54,13 @@ header {
     width: 35%;
     text-align: right;
     margin-right: 50px;
-    /* font-size: 18px; */
+    font-size: 18px;
+    color: var(--color2);
 }
 
 #intro h2 {
-    font-size: 40px;
+    font-size: 45px;
+    text-shadow: -3px -3px 5px rgba(0, 0, 0, 0.5);
 }
 
 header nav {
@@ -59,21 +71,85 @@ header nav {
 
 header nav ul {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     list-style: none;
 }
 
 header nav ul li a {
     text-decoration: none;
-    color:rgb(29, 29, 29);
+    color: var(--color2);
     font-size: 40px;
-    background-color: seashell;
+    /* background-color: var(--color2); */
     padding: 5px;
-    border-radius: 10px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    /* border-radius: 10px; */
+    text-shadow: -5px -3px 6px rgba(0, 0, 0, 0.75);
+    margin: 0 25px;
 }
 
 header nav ul li a:hover {
-    background-color: rgb(29, 29, 29);
-    color: white;
+    /* background-color:  var(--color1); */
+    /* color: var(--color3); */
+    border-bottom:solid 2px var(--color3);
 }
+/* end header stlyes  */
+
+/* about section styles  */
+.major-section {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--color1);
+}
+
+.section-title {
+    display: flex;
+    justify-content: center;
+    width: 10%;
+}
+
+.section-title h1 {
+    transform: rotate(-90deg);
+    font-size: 60px;
+    font-weight: lighter;
+    border-bottom:solid 2px var(--color3);
+    color: var(--color2);
+}
+
+.content-block {
+    display: flex;
+    width: 60%;
+    color: var(--color2);
+}
+/* end about section styles  */
+
+/* creations section styles  */
+.major-section-inverse {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--color2);
+}
+
+.section-title-inverse {
+    display: flex;
+    justify-content: center;
+    width: 10%;
+}
+
+.section-title-inverse h1 {
+    transform: rotate(-90deg);
+    font-size: 60px;
+    font-weight: lighter;
+    border-bottom:solid 2px var(--color3);
+    color: var(--color1);
+}
+/* end creations section styles */
+
+/* reach me section styles */
+.section-title span {
+    font-size: smaller;
+    opacity: 0;
+}
+/* end reach me section styles  */
