--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,13 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 :root {
     --color1: rgb(29, 29, 29);
     --color2: seashell;
-    --color3: gold;
+    --color3: rgb(253, 224, 57);
 }
 
 html, body {
@@ -42,9 +42,15 @@ header {
     align-items: center;
     justify-content: center;
     width: 35%;
-    font-size: 38px;
+    font-size: 2vw;
     color: var(--color2);
     text-shadow: -5px -5px 5px rgba(0, 0, 0, 0.5);
+}
+
+#name h1 a {
+    color: var(--color2);
+    text-decoration: none;
+    margin-left: 40px;
 }
 
 #intro {
@@ -53,18 +59,21 @@ header {
     justify-content: center;
     width: 35%;
     text-align: right;
-    margin-right: 50px;
-    font-size: 18px;
+    font-size: 1vw;
     color: var(--color2);
 }
 
 #intro h2 {
-    font-size: 45px;
+    font-size: 2vw;
     text-shadow: -3px -3px 5px rgba(0, 0, 0, 0.5);
+    margin-right: 70px;
+}
+
+#intro p {
+    margin-right: 70px;
 }
 
 header nav {
-    width: 100%;
     text-align: center;
     margin-bottom: 50px;
 }
@@ -78,17 +87,14 @@ header nav ul {
 header nav ul li a {
     text-decoration: none;
     color: var(--color2);
-    font-size: 40px;
-    /* background-color: var(--color2); */
+    font-size: 2vw;
     padding: 5px;
-    /* border-radius: 10px; */
     text-shadow: -5px -3px 6px rgba(0, 0, 0, 0.75);
     margin: 0 25px;
+    font-weight: lighter;
 }
 
 header nav ul li a:hover {
-    /* background-color:  var(--color1); */
-    /* color: var(--color3); */
     border-bottom:solid 2px var(--color3);
 }
 /* end header stlyes  */
@@ -110,7 +116,7 @@ header nav ul li a:hover {
 
 .section-title h1 {
     transform: rotate(-90deg);
-    font-size: 60px;
+    font-size: 4vw;
     font-weight: lighter;
     border-bottom:solid 2px var(--color3);
     color: var(--color2);
@@ -118,8 +124,10 @@ header nav ul li a:hover {
 
 .content-block {
     display: flex;
+    flex-wrap: wrap;
     width: 60%;
     color: var(--color2);
+    font-size: 1vw;
 }
 /* end about section styles  */
 
@@ -140,10 +148,82 @@ header nav ul li a:hover {
 
 .section-title-inverse h1 {
     transform: rotate(-90deg);
-    font-size: 60px;
+    font-size: 4vw;
     font-weight: lighter;
     border-bottom:solid 2px var(--color3);
     color: var(--color1);
+}
+
+.creations-block {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 60%;
+}
+
+.big-card {
+    background-image: url(/assets/images/run-buddy.jpg);
+    background-size: cover;
+    height: 20vw;
+    width: 73.7%;
+    border: solid 2px var(--color1);
+    margin: 1vw;
+    text-decoration: none;
+}
+
+.hover {
+    width: 100%;
+    height: 100%;
+    color: var(--color1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hover span {
+    font-size: 2vw;
+    color: var(--color2);
+    display: none;
+}
+
+.big-card span {
+    font-size: 4vw;
+}
+
+.big-card:hover .hover {
+    background: linear-gradient(rgba(253, 224, 57, 0) 0%, rgba(29, 29, 29, 0.9) 100%);
+}
+
+.big-card:hover span {
+    display: block;
+}
+
+.lil-card {
+    background-image: url(/assets/images/code-refactor.jpg);
+    background-size: cover;
+    height: 10vw;
+    width: 35%;
+    border: solid 2px var(--color1);
+    margin: 1vw;
+    text-decoration: none;
+}
+
+.img3 {
+    background-image: url(/assets/images/pro-portfolio.jpg);
+    background-size: cover;
+    height: 10vw;
+    width: 35%;
+    border: solid 2px var(--color1);
+    margin: 1vw;
+    text-decoration: none;
+}
+
+.lil-card:hover .hover {
+    background: linear-gradient(rgba(253, 224, 57, 0) 0%, rgba(29, 29, 29, 0.9) 100%);
+}
+
+.lil-card:hover span {
+    display: block
 }
 /* end creations section styles */
 
@@ -153,3 +233,13 @@ header nav ul li a:hover {
     opacity: 0;
 }
 /* end reach me section styles  */
+
+/* footer styles  */
+footer {
+    display: flex;
+    justify-content: space-between;
+    color: var(--color1);
+    background-color: var(--color3);
+    padding: 10px;
+}
+/* end footer styles */
