--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ body {
 
 /* header styles  */
 header {
-    background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url('./assets/images/headshot.jpg');
+    background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url('../images/headshot.jpg');
     background-size: 100%;
     height: 100%;
     display: flex;
@@ -162,7 +162,7 @@ header nav ul li a:hover {
 }
 
 .big-card {
-    background-image: url(/assets/images/run-buddy.jpg);
+    background-image: url(../images/run-buddy.jpg);
     background-size: cover;
     height: 20vw;
     width: 73.7%;
@@ -199,7 +199,7 @@ header nav ul li a:hover {
 }
 
 .lil-card {
-    background-image: url(/assets/images/code-refactor.jpg);
+    background-image: url(../images/code-refactor.jpg);
     background-size: cover;
     height: 10vw;
     width: 35%;
@@ -209,7 +209,7 @@ header nav ul li a:hover {
 }
 
 .img3 {
-    background-image: url(/assets/images/pro-portfolio.jpg);
+    background-image: url(../images/pro-portfolio.jpg);
     background-size: cover;
     height: 10vw;
     width: 35%;
