--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ header nav {
     justify-content: center;
     align-items: center;
     text-align: center;
-    height: 10%;
+    height: 20%;
 }
 
 header nav ul {
@@ -285,6 +285,7 @@ header nav ul li a:hover {
 footer {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     color: var(--color1);
     background-color: var(--color3);
     padding: 10px;
@@ -332,12 +333,12 @@ footer {
     }
 
     #name h1 {
-        padding: 10px 50px;
+        padding: 10px 20px;
     }
 
     #name h1 a {
         /* color: hotpink; */
-        font-size: 45px;
+        font-size: 35px;
     }
 
     #name h2 {
@@ -347,6 +348,14 @@ footer {
     #intro-block {
         flex-direction: column;
         justify-content: space-around;
+        align-items: center;
+    }
+
+    .sub-block {
+        width: 60%;
+        background-color: rgba(187, 187, 187, 0.2);
+        border-radius: 15px;
+        padding: 15px;
     }
 
     .sub-block img {
@@ -358,7 +367,11 @@ footer {
     }
 
     header nav ul li a {
-        font-size: 22px;
+        font-size: 17px;
+    }
+
+    #about {
+        height: 120%;
     }
 
     .major-section, .major-section-inverse, .minor-section {
@@ -388,7 +401,7 @@ footer {
     }
 
     .creations-block {
-        width: 90%;
+        width: 100%;
         height: 40%;
     }
 
@@ -410,9 +423,22 @@ footer {
         display: block;
         background-color: var(--color1);
         border-radius: 7px;
+        font-size: 18px;
+    }
+
+    .contact {
+        width: 90%;
     }
 
     .contact img {
         width: 40px;
+    }
+
+    footer h3 {
+        font-size: 14px;
+    }
+
+    footer p {
+        font-size: 12px;
     }
 }
