--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -342,7 +342,7 @@ footer {
     }
 
     #name h2 {
-        font-size: 22px;
+        font-size: 18px;
     }
 
     #intro-block {
@@ -370,10 +370,6 @@ footer {
         font-size: 17px;
     }
 
-    #about {
-        height: 120%;
-    }
-
     .major-section, .major-section-inverse, .minor-section {
         flex-direction: column;
     }
@@ -394,6 +390,10 @@ footer {
         border-bottom:solid 2px var(--color3);
         color: var(--color1);
         margin: 20px;
+    }
+
+    .content-block {
+        width: 80%;
     }
 
     .content-block p {
